--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Twitter::ID
 
+1.0050  2022-08-07
+
+ - Documentation fixes
+
 1.00  2022-07-25
 
- - initial release
+ - Initial release
